--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <script type="text/javascript" src="script.js"></script>
     <link rel="icon" type="imagem/x-icon" href="/img/favicon.png">
     <title>X. O que está Acontencendo no / X</title>
