--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="./CSS/index.css">
     <script type="text/javascript" src="script.js"></script>
-    <link rel="icon" type="imagem/x-icon" href="/img/favicon.png">
+    <link rel="icon" type="imagem/x-icon" href="./img/favicon.png">
     <title>X. O que está Acontencendo no / X</title>
 </head>
 
@@ -19,8 +19,8 @@
             <!-- <h1>Acontencendo agora</h1> -->
             <form>
                 <h2>Inscreva-se hoje</h2><br>
-                <button id="inscrever"><a href=""><img src="img/google.png"/> Inscrever-se no Google</a></button>
-                <button id="inscrever"><a href=""><img src="img/apple.png"/>  Inscrever-se com Apple</a></button>
+                <button id="inscrever"><a href=""><img src="./img/google.png"/> Inscrever-se no Google</a></button>
+                <button id="inscrever"><a href=""><img src="./img/apple.png"/>  Inscrever-se com Apple</a></button>
                 <div class="OU">
                     <ul>
                         <li><hr/></li>
